--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.71",
     "@prisma/client": "^6.18.0",
+    "ai": "^5.0.99",
     "hamburger-react": "^2.5.2",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
